--- a/.settings/com.eclipsesource.jshint.ui.prefs
+++ b/.settings/com.eclipsesource.jshint.ui.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 excluded=//legacyVisualizations.js\:WebContent/js/lib//*
 included=//*.js
+projectSpecificOptions=true
